--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 ***REMOVED***,
   "dependencies": {
     "core-js": "^3.6.5",
+    "lodash": "^4.17.15",
     "register-service-worker": "^1.7.1",
     "vue": "^3.0.0-0",
     "vue-router": "^4.0.0-0",
@@ -23,12 +24,17 @@
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0-0",
     "@vue/eslint-config-prettier": "^6.0.0",
+    "axios": "^0.18.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^7.0.0-0",
     "lint-staged": "^9.5.0",
-    "prettier": "^1.19.1"
+    "prettier": "^1.19.1",
+    "vue-cli-plugin-axios": "~0.0.4",
+    "vue-cli-plugin-lodash": "~0.1.3",
+    "vue-cli-plugin-moment": "~0.1.1",
+    "vue-cli-plugin-tailwind": "~1.5.0"
 ***REMOVED***,
   "gitHooks": {
     "pre-commit": "lint-staged"
