--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.3.1",
     "@vee-validate/i18n": "^4.0.0-beta.0",
     "@vee-validate/rules": "^4.0.0-alpha.1",
+    "autoprefixer": "^10.1.0",
     "core-js": "^3.6.5",
     "lodash": "^4.17.15",
+    "postcss": "^8.2.1",
     "register-service-worker": "^1.7.1",
+    "tailwindcss": "^2.0.2",
     "vee-validate": "^4.0.0-alpha.14",
     "vue": "^3.0.0-0",
     "vue-router": "^4.0.0-0",
