--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@tailwindcss/typography": "^0.3.1",
     "@vee-validate/i18n": "^4.0.0-beta.0",
     "@vee-validate/rules": "^4.0.0-alpha.1",
+    "@vueuse/core": "^4.0.1",
+    "@vueuse/integrations": "^4.0.1",
+    "@vueuse/router": "^4.0.1",
     "autoprefixer": "^9",
     "core-js": "^3.6.5",
     "lodash": "^4.17.15",
@@ -20,7 +23,7 @@
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "vee-validate": "^4.0.0-alpha.14",
     "vue": "^3.0.0-0",
-    "vue-router": "^4.0.0-0",
+    "vue-router": "4",
     "vuex": "^4.0.0-0",
     "yup": "^0.29.3"
 ***REMOVED***,
