--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@vueuse/router": "^4.0.1",
     "autoprefixer": "^9",
     "core-js": "^3.6.5",
+    "formvuelate": "^2.0.0",
     "lodash": "^4.17.15",
     "postcss": "^7",
     "register-service-worker": "^1.7.1",
