--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
 ***REMOVED***,
   "dependencies": {
+    "@formvuelate/plugin-vee-validate": "formvuelate/formvuelate-plugin-vee-validate#feat/support-nested-forms",
     "@tailwindcss/postcss7-compat": "^2.0.2",
     "@tailwindcss/typography": "^0.3.1",
     "@vee-validate/i18n": "^4.0.0-beta.0",
