--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 ***REMOVED***,
   "dependencies": {
     "@formvuelate/plugin-vee-validate": "formvuelate/formvuelate-plugin-vee-validate#feat/support-nested-forms",
+    "@tailwindcss/forms": "^0.2.1",
     "@tailwindcss/postcss7-compat": "^2.0.2",
     "@tailwindcss/typography": "^0.3.1",
     "@vee-validate/i18n": "^4.0.0-beta.0",
