--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@formvuelate/plugin-vee-validate": "formvuelate/formvuelate-plugin-vee-validate#feat/support-nested-forms",
+    "@formvuelate/plugin-lookup": "^1.2.0",
+    "@formvuelate/plugin-vee-validate": "^1.0.4",
     "@tailwindcss/forms": "^0.2.1",
     "@tailwindcss/postcss7-compat": "^2.0.2",
     "@tailwindcss/typography": "^0.3.1",
