--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "vee-validate": "^4.0.0-alpha.14",
     "vue": "^3.0.0-0",
     "vue-router": "4",
+    "vue-router-layout": "^0.2.0",
     "vuex": "^4.0.0-0",
     "yup": "^0.29.3"
   },
@@ -47,6 +48,8 @@
     "eslint-plugin-vue": "^7.0.0-0",
     "lint-staged": "^9.5.0",
     "prettier": "^1.19.1",
+    "vue-auto-routing": "^1.0.0",
+    "vue-cli-plugin-auto-routing": "~1.1.1",
     "vue-cli-plugin-axios": "~0.0.4",
     "vue-cli-plugin-lodash": "~0.1.3",
     "vue-cli-plugin-moment": "~0.1.1",
