--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@formvuelate/plugin-lookup": "^1.2.3",
     "@formvuelate/plugin-vee-validate": "^1.0.6",
     "@tailwindcss/forms": "^0.2.1",
+    "@tailwindcss/line-clamp": "^0.2.0",
     "@tailwindcss/postcss7-compat": "npm:@tailwindcss/postcss7-compat",
     "@tailwindcss/typography": "^0.3.1",
     "@vee-validate/i18n": "^4.0.0-beta.0",
