--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "lodash": "^4.17.15",
     "postcss": "^7",
     "register-service-worker": "^1.7.1",
+    "swiper": "^6.5.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "vee-validate": "^4.0.0-alpha.14",
     "vue": "^3.0.0-0",
