--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "vee-validate": "^4.0.0-alpha.14",
     "vue": "^3.0.0-0",
+    "vue-cookie-next": "^1.0.3",
+    "vue-gapi": "^1.1.0",
+    "vue-gtm": "^3.5.0",
     "vue-router": "4",
     "vue-router-layout": "^0.2.0",
     "vuex": "^4.0.0-0",
