--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@formvuelate/plugin-lookup": "^1.2.3",
     "@formvuelate/plugin-vee-validate": "^1.0.6",
+    "@tailwindcss/aspect-ratio": "^0.2.0",
     "@tailwindcss/forms": "^0.2.1",
     "@tailwindcss/line-clamp": "^0.2.0",
     "@tailwindcss/postcss7-compat": "npm:@tailwindcss/postcss7-compat",
@@ -26,7 +27,9 @@
     "postcss": "^7",
     "register-service-worker": "^1.7.1",
     "swiper": "^6.5.0",
+    "tailwind-scrollbar": "^1.2.4",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
+    "uuid": "^8.3.2",
     "vee-validate": "^4.0.0-alpha.14",
     "vue": "^3.0.0-0",
     "vue-cookie-next": "^1.0.3",
