--- a/package.json
+++ b/package.json
@@ -8,21 +8,21 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@formvuelate/plugin-lookup": "^1.2.3",
-    "@formvuelate/plugin-vee-validate": "^1.0.6",
+    "@formvuelate/plugin-lookup": "^2.0.0",
+    "@formvuelate/plugin-vee-validate": "^2.1.6",
     "@tailwindcss/aspect-ratio": "^0.2.0",
     "@tailwindcss/forms": "^0.2.1",
     "@tailwindcss/line-clamp": "^0.2.0",
     "@tailwindcss/postcss7-compat": "npm:@tailwindcss/postcss7-compat",
     "@tailwindcss/typography": "^0.3.1",
-    "@vee-validate/i18n": "^4.0.0-beta.0",
-    "@vee-validate/rules": "^4.0.0-alpha.1",
+    "@vee-validate/i18n": "^4.2.4",
+    "@vee-validate/rules": "^4.2.4",
     "@vueuse/core": "^4.0.1",
     "@vueuse/integrations": "^4.0.1",
     "@vueuse/router": "^4.0.1",
     "autoprefixer": "^9",
     "core-js": "^3.6.5",
-    "formvuelate": "^2.0.0",
+    "formvuelate": "^3.1.0",
     "lodash": "^4.17.15",
     "postcss": "^7",
     "register-service-worker": "^1.7.1",
@@ -30,15 +30,15 @@
     "tailwind-scrollbar": "^1.2.4",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "uuid": "^8.3.2",
-    "vee-validate": "^4.0.0-alpha.14",
-    "vue": "^3.0.0-0",
+    "vee-validate": "^4.2.4",
+    "vue": "^3.0.10",
     "vue-cookie-next": "^1.0.3",
     "vue-gapi": "^1.1.0",
     "vue-gtm": "^3.5.0",
     "vue-router": "4",
     "vue-router-layout": "^0.2.0",
     "vuex": "^4.0.0-0",
-    "yup": "^0.29.3"
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
