--- a/package.json
+++ b/package.json
@@ -9,26 +9,25 @@
   },
   "dependencies": {
     "@formvuelate/plugin-lookup": "^2.0.0",
-    "@formvuelate/plugin-vee-validate": "^2.1.6",
+    "@formvuelate/plugin-vee-validate": "^2.1.0",
     "@tailwindcss/aspect-ratio": "^0.2.0",
-    "@tailwindcss/forms": "^0.2.1",
+    "@tailwindcss/forms": "^0.3.2",
     "@tailwindcss/line-clamp": "^0.2.0",
-    "@tailwindcss/postcss7-compat": "npm:@tailwindcss/postcss7-compat",
-    "@tailwindcss/typography": "^0.3.1",
+    "@tailwindcss/typography": "^0.4.0",
     "@vee-validate/i18n": "^4.2.4",
     "@vee-validate/rules": "^4.2.4",
     "@vueuse/core": "^4.0.1",
     "@vueuse/integrations": "^4.0.1",
     "@vueuse/router": "^4.0.1",
-    "autoprefixer": "^9",
+    "autoprefixer": "^10.2.5",
     "core-js": "^3.6.5",
-    "formvuelate": "^3.1.0",
+    "formvuelate": "3.1.0",
     "lodash": "^4.17.15",
-    "postcss": "^7",
+    "postcss": "^8.2.9",
     "register-service-worker": "^1.7.1",
     "swiper": "^6.5.0",
     "tailwind-scrollbar": "^1.2.4",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
+    "tailwindcss": "^2.0.4",
     "uuid": "^8.3.2",
     "vee-validate": "^4.2.4",
     "vue": "^3.0.10",
@@ -41,17 +40,17 @@
     "yup": "^0.32.9"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-pwa": "~4.5.0",
-    "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-plugin-vuex": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
+    "@vue/cli-plugin-babel": "^5.0.0-alpha.8",
+    "@vue/cli-plugin-eslint": "^5.0.0-alpha.8",
+    "@vue/cli-plugin-pwa": "^5.0.0-alpha.8",
+    "@vue/cli-plugin-router": "^5.0.0-alpha.8",
+    "@vue/cli-plugin-vuex": "^5.0.0-alpha.8",
+    "@vue/cli-service": "^5.0.0-alpha.8",
     "@vue/compiler-sfc": "^3.0.0-0",
     "@vue/eslint-config-prettier": "^6.0.0",
     "axios": "^0.18.0",
     "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
+    "eslint": "^7.23.0",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^7.0.0-0",
     "lint-staged": "^9.5.0",
