--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@formvuelate/plugin-lookup": "^2.0.0",
     "@formvuelate/plugin-vee-validate": "^2.1.0",
+    "@suadelabs/vue3-multiselect": "^1.0.0",
     "@tailwindcss/aspect-ratio": "^0.2.0",
     "@tailwindcss/forms": "^0.3.2",
     "@tailwindcss/line-clamp": "^0.2.0",
