--- a/package.json
+++ b/package.json
@@ -8,58 +8,59 @@
     "lint": "vue-cli-service lint --fix"
   },
   "dependencies": {
-    "@formvuelate/plugin-lookup": "^2.0.0",
-    "@formvuelate/plugin-vee-validate": "^2.1.0",
-    "@gtm-support/vue-gtm": "^1.0.0",
-    "@suadelabs/vue3-multiselect": "^1.0.0",
-    "@vee-validate/i18n": "^4.2.4",
-    "@vee-validate/rules": "^4.2.4",
-    "@vueuse/core": "^4.0.1",
-    "@vueuse/integrations": "^4.0.1",
-    "@vueuse/router": "^4.0.1",
-    "core-js": "^3.6.5",
-    "formvuelate": "3.1.0",
+    "@formvuelate/plugin-lookup": "^3.4.0",
+    "@formvuelate/plugin-vee-validate": "^3.4.0",
+    "@gtm-support/vue-gtm": "^1.1.0",
+    "@suadelabs/vue3-multiselect": "^1.0.2",
+    "@vee-validate/i18n": "^4.4.7",
+    "@vee-validate/rules": "^4.4.7",
+    "@vueuse/core": "^5.3.0",
+    "@vueuse/integrations": "^5.3.0",
+    "@vueuse/router": "^5.3.0",
+    "core-js": "^3.16.1",
+    "formvuelate": "3.4.0",
     "lodash": "^4.17.15",
     "register-service-worker": "^1.7.1",
-    "swiper": "^6.5.0",
+    "swiper": "^6.8.1",
     "uuid": "^8.3.2",
     "vee-validate": "^4.2.4",
     "vue": "^3.0.10",
-    "vue-cookie-next": "^1.0.3",
+    "vue-cookie-next": "^1.3.0",
     "vue-gapi": "^1.1.0",
     "vue-router": "4",
-    "vue-router-layout": "^0.3.0",
+    "vue-router-layout": "^0.4.0",
     "vue3-click-away": "^1.2.1",
     "vuex": "^4.0.0-0",
     "yup": "^0.32.9"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.0",
-    "@babel/eslint-parser": "^7.13.14",
-    "@tailwindcss/aspect-ratio": "^0.2.0",
-    "@tailwindcss/forms": "^0.3.2",
-    "@tailwindcss/line-clamp": "^0.2.0",
-    "@tailwindcss/typography": "^0.4.0",
+    "@babel/core": "^7.15.0",
+    "@babel/eslint-parser": "^7.15.0",
+    "@tailwindcss/aspect-ratio": "^0.2.1",
+    "@tailwindcss/forms": "^0.3.3",
+    "@tailwindcss/line-clamp": "^0.2.1",
+    "@tailwindcss/typography": "^0.4.1",
     "@vue/cli-plugin-babel": "^5.0.0-alpha.8",
     "@vue/cli-plugin-eslint": "^5.0.0-alpha.8",
     "@vue/cli-plugin-router": "^5.0.0-alpha.8",
     "@vue/cli-plugin-vuex": "^5.0.0-alpha.8",
     "@vue/cli-service": "^5.0.0-alpha.8",
-    "@vue/compiler-sfc": "^3.0.0-0",
+
+    "@vue/compiler-sfc": "^3.2.1",
     "@vue/eslint-config-prettier": "^6.0.0",
-    "autoprefixer": "^10.2.5",
+    "autoprefixer": "^10.3.1",
     "axios": "^0.21.1",
-    "eslint": "^7.25.0",
+    "eslint": "^7.32.0",
     "eslint-plugin-prettier": "^3.1.3",
-    "eslint-plugin-vue": "^7.0.0-0",
-    "lint-staged": "^10.5.4",
-    "postcss": "^8.2.9",
-    "prettier": "^2.2.1",
-    "tailwind-scrollbar": "^1.2.4",
-    "tailwindcss": "^2.0.4",
+    "eslint-plugin-vue": "^7.16.0",
+    "lint-staged": "^11.1.2",
+    "postcss": "^8.3.6",
+    "prettier": "^2.3.2",
+    "tailwind-scrollbar": "^1.3.1",
+    "tailwindcss": "^2.2.7",
     "tailwindcss-touch": "^1.0.1",
     "vue-auto-routing": "^1.0.0",
-    "vue-cli-plugin-auto-routing": "^1.2.0",
+    "vue-cli-plugin-auto-routing": "^1.3.0",
     "vue-cli-plugin-axios": "~0.0.4",
     "vue-cli-plugin-lodash": "~0.1.3",
     "vue-cli-plugin-moment": "~0.1.1",
