--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@vueuse/integrations": "^5.3.0",
     "@vueuse/router": "^5.3.0",
     "core-js": "^3.16.1",
-    "formvuelate": "3.4.0",
+    "formvuelate": "^3.4.0",
     "lodash": "^4.17.15",
     "register-service-worker": "^1.7.1",
     "swiper": "^6.8.1",
@@ -27,7 +27,7 @@
     "vue": "^3.0.10",
     "vue-cookie-next": "^1.3.0",
     "vue-gapi": "^1.1.0",
-    "vue-router": "4",
+    "vue-router": "^4",
     "vue-router-layout": "^0.4.0",
     "vue3-click-away": "^1.2.1",
     "vuex": "^4.0.0-0",
@@ -45,7 +45,6 @@
     "@vue/cli-plugin-router": "^5.0.0-alpha.8",
     "@vue/cli-plugin-vuex": "^5.0.0-alpha.8",
     "@vue/cli-service": "^5.0.0-alpha.8",
-
     "@vue/compiler-sfc": "^3.2.1",
     "@vue/eslint-config-prettier": "^6.0.0",
     "autoprefixer": "^10.3.1",
@@ -61,9 +60,9 @@
     "tailwindcss-touch": "^1.0.1",
     "vue-auto-routing": "^1.0.0",
     "vue-cli-plugin-auto-routing": "^1.3.0",
-    "vue-cli-plugin-axios": "~0.0.4",
-    "vue-cli-plugin-lodash": "~0.1.3",
-    "vue-cli-plugin-moment": "~0.1.1",
+    "vue-cli-plugin-axios": "^0.0.4",
+    "vue-cli-plugin-lodash": "^0.1.3",
+    "vue-cli-plugin-moment": "^0.1.1",
     "vue-cli-plugin-tailwind": "^2.0.6"
   },
   "gitHooks": {
